--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,26 @@
-<h2>Sign up</h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+  <div class="d-flex flex-column" style="height:100vh;">
+  <div class="mb-auto h-100">
+    <div class="field">
+      <%= f.text_field :name, autofocus: true,class: 'form-control p-3 border-bottom',placeholder: 'Full Name' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </div>
+    <div class="field">
+      <%= f.email_field :email,  autocomplete: "email",class: 'form-control p-3 border-bottom',placeholder: 'Email' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email,  autocomplete: "email" %>
-  </div>
+    <div class="field">
+      <%= f.password_field :password, autocomplete: "new-password",class: 'form-control p-3 border-bottom',placeholder: 'Password' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <div class="field">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password",class: 'form-control p-3 border-bottom',placeholder: 'Confirm password' %>
+    </div>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class: 'btn btn-primary p-3 w-100' %>
+  </div>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
