type and speading pages and logic

--- a/app/views/spendings/_form.html.erb
+++ b/app/views/spendings/_form.html.erb
@@ -1,17 +1,18 @@
 <%= form_with(model: spending) do |form| %>
-  <% if spending.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(spending.errors.count, "error") %> prohibited this spending from being saved:</h2>
-
-      <ul>
-        <% spending.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+<div class="d-flex flex-column" style="height:100vh;">
+  <div class="mb-auto h-100">
+    <div class="field">
+      <%= form.text_field :name,class: 'form-control p-3 border-bottom', placeholder: 'Name' %>
     </div>
-  <% end %>
-
-  <div>
-    <%= form.submit %>
+    <div class="field">
+      <%= form.select :type_id, @types.all.collect {|p| [ p.name, p.id ] }, {:prompt => 'Select One Type'}, { :class => 'form-select p-3 border-bottom' } %>
+    </div>
+    <div class="field">
+      <%= form.text_field :amount,class: 'form-control p-3 border-bottom', placeholder: 'Amount' %>
+    </div>
   </div>
+  <div class="p-5 bg-success">
+    <%= form.submit class: 'btn btn-success p-3 w-100 border border-white' %>
+  </div>
+</div>
 <% end %>
