--- a/app/views/spendings/index.html.erb
+++ b/app/views/spendings/index.html.erb
@@ -1,14 +1,19 @@
-<p style="color: green"><%= notice %></p>
+<% if false %>
+<% @spendings.each do |spending| %>
+  <%= render spending %>
+  <p>
+    <%= link_to "Show this spending", spending %>
+  </p>
+<% end %>
+<% end %>
 
-<h1>Spendings</h1>
-
-<div id="spendings">
-  <% @spendings.each do |spending| %>
-    <%= render spending %>
-    <p>
-      <%= link_to "Show this spending", spending %>
-    </p>
-  <% end %>
+<div class="d-flex flex-column" style="height:100vh;">
+  <div id="spendings" class="mb-auto h-100">
+    <% @spendings.each do |spending| %>
+      <%= render spending %>
+    <% end %>
+  </div>
+  <div class="p-5 bg-success">
+    <%= link_to "New spending", new_spending_path,class: 'btn btn-success p-3 w-100 border border-white' %>
+  </div>
 </div>
-
-<%= link_to "New spending", new_spending_path %>
