--- a/app/views/types/_form.html.erb
+++ b/app/views/types/_form.html.erb
@@ -1,17 +1,16 @@
 <%= form_with(model: type) do |form| %>
-  <% if type.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(type.errors.count, "error") %> prohibited this type from being saved:</h2>
 
-      <ul>
-        <% type.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+  <div class="d-flex flex-column" style="height:100vh;">
+    <div class="mb-auto h-100">
+      <div class="field">
+        <%= form.text_field :icon,class: 'form-control p-3 border-bottom', placeholder: 'Icon URL' %>
+      </div>
+      <div class="field">
+        <%= form.text_field :name,class: 'form-control p-3 border-bottom', placeholder: 'Name' %>
+      </div>
     </div>
-  <% end %>
-
-  <div>
-    <%= form.submit %>
+    <div class="p-5 bg-success">
+      <%= form.submit class: 'btn btn-success p-3 w-100 border border-white' %>
+    </div>
   </div>
 <% end %>
