--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body style="height:100vh;">
+    <% if notice %>
+      <p class="notice bg-green-300 p-2"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert bg-red-300 p-2"><%= alert %></p>
+    <% end %>
     <main style="height:100vh;">
       <%= yield %>
     </main>
