--- a/app/views/types/_type.html.erb
+++ b/app/views/types/_type.html.erb
@@ -4,14 +4,14 @@
     <div class="col-3 m-3">
       <img src="<%= type.icon %>" class="img-fluid rounded-start" alt="...">
     </div>
-    <div class="col-6">
+    <div class="col-5">
       <div class="card-body">
         <h5 class="card-title"><%= type.name %></h5>
         <p class="card-text"><small class="text-muted"><%= type.created_at %></small></p>
       </div>
     </div>
-    <div class="col-2 d-flex justify-content-center align-items-center">
-      <h2><b>2$</b></h2>
+    <div class="col-2 d-flex justify-content-center align-items-center p-1">
+      <h2><b>$<%= type.spendings.sum(:amount) %></b></h2>
     </div>
   </div>
 </div>
