--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light bg-primary p-4 d-flex ">
   <button type="button" class="btn btn-primary position-absolute">
-  <% if current_page?(types_path) %>
-      <i class="fa fa-home"></i>
+  <% if current_page?(my_page_path) %>
+      <i class="fa fa-home" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1"></i>
     <% else %>
     <%= link_to :back do %>
       back
@@ -10,7 +10,7 @@
   </button>
   <div class="w-100">
     <h3 class="text-center text-white mr-5">
-      <% if current_page?(types_path) %>
+      <% if current_page?(my_page_path) %>
         Types
       <% end %>
       <% if current_page?(new_type_path) %>
@@ -25,3 +25,15 @@
     </h3>
   </div>
 </nav>
+
+<div class="row">
+  <div class="col">
+    <div class="collapse multi-collapse" id="multiCollapseExample1">
+      <div class="card card-body">
+        <% if user_signed_in? %>
+        <%= button_to "Logout", destroy_user_session_path, method: :delete , class: "btn btn-light ms-3" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
