--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -10,7 +10,9 @@
 <div class="d-flex flex-column" style="height:100vh;">
   <div id="types" class="mb-auto h-100">
     <% @types.each do |type| %>
-      <%= render type %>
+      <%= link_to spendings_path(type.id) do %>
+        <%= render type %>
+      <% end %>
     <% end %>
   </div>
   <div class="p-5 bg-success">
