--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
-  <body style="height:100vh;">
+  <body>
     <%= render "layouts/header" %>
     <% if notice %>
       <p class="notice bg-green-300 p-2"><%= notice %></p>
@@ -20,7 +20,7 @@
     <% if alert %>
       <p class="alert bg-red-300 p-2"><%= alert %></p>
     <% end %>
-    <main style="height:100vh;">
+    <main style="">
       <%= yield %>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
