--- a/app/views/types/_form.html.erb
+++ b/app/views/types/_form.html.erb
@@ -3,10 +3,10 @@
   <div class="d-flex flex-column" style="height:90vh;">
     <div class="mb-auto h-100">
       <div class="field">
-        <%= form.text_field :icon,class: 'form-control p-3 border-bottom', placeholder: 'Icon URL' %>
+        <%= form.text_field :icon,class: 'form-control p-3 border-bottom', required: true, placeholder: 'Icon URL' %>
       </div>
       <div class="field">
-        <%= form.text_field :name,class: 'form-control p-3 border-bottom', placeholder: 'Name' %>
+        <%= form.text_field :name,class: 'form-control p-3 border-bottom', required: true, placeholder: 'Name' %>
       </div>
     </div>
     <div class="p-5 bg-success">
