--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,14 @@
   </head>
 
   <body>
-    <%= render "layouts/header" %>
-    <% if notice %>
-      <p class="notice bg-green-300 p-2"><%= notice %></p>
-    <% end %>
-    <% if alert %>
-      <p class="alert bg-red-300 p-2"><%= alert %></p>
-    <% end %>
-    <main style="">
+    <main style="height:75vh;">
+      <%= render "layouts/header" %>
+      <% if notice %>
+        <p class="notice bg-green-300 p-2"><%= notice %></p>
+      <% end %>
+      <% if alert %>
+        <p class="alert bg-red-300 p-2"><%= alert %></p>
+      <% end %>
       <%= yield %>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
