--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <main style="height:75vh;">
+    <main style="height:100vh;" class="d-flex flex-column">
       <%= render "layouts/header" %>
       <% if notice %>
         <p class="notice bg-green-300 p-2"><%= notice %></p>
