--- a/app/views/spendings/index.html.erb
+++ b/app/views/spendings/index.html.erb
@@ -1,5 +1,5 @@
 
-  <div id="spendings" class="mb-auto h-100">
+  <div id="spendings" class="mb-auto">
     <div class="d-flex justify-content-between p-3 m-2 border-success">
       <span>total amount spent</span>
       <span>$<%= @spendings.sum(:amount) %></span>
