--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -1,5 +1,5 @@
 
-  <div id="types" class="mb-auto h-100">
+  <div id="types" class="mb-auto">
     <% @types.each do |type| %>
       <%= link_to spendings_path(type.id) do %>
         <%= render type %>
