--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,5 @@
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <div class="d-flex flex-column" style="height:94vh;">
-  <div class="mb-auto h-100">
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "d-flex flex-column",style:"height:100vh;"}) do |f| %>
+  <div class="mb-auto">
     <div class="field">
       <%= f.text_field :name, autofocus: true,class: 'form-control p-3 border-bottom',placeholder: 'Full Name' %>
     </div>
@@ -21,6 +19,5 @@
 
   <div class="actions">
     <%= f.submit "Sign up", class: 'btn btn-primary p-3 w-100' %>
-  </div>
   </div>
 <% end %>
