--- a/app/views/types/_form.html.erb
+++ b/app/views/types/_form.html.erb
@@ -1,7 +1,5 @@
-<%= form_with(model: type) do |form| %>
-
-  <div class="d-flex flex-column" style="height:90vh;">
-    <div class="mb-auto h-100">
+<%= form_with(model: type, html: {class: "d-flex flex-column",style:"height:100vh;"}) do |form| %>
+    <div class="mb-auto">
       <div class="field">
         <%= form.text_field :icon,class: 'form-control p-3 border-bottom', required: true, placeholder: 'Icon URL' %>
       </div>
@@ -12,5 +10,4 @@
     <div class="p-5 bg-success">
       <%= form.submit class: 'btn btn-success p-3 w-100 border border-white' %>
     </div>
-  </div>
 <% end %>
